--- a/src/style.css
+++ b/src/style.css
@@ -102,6 +102,13 @@ body {
     color: #fff;
 }
 
+.version {
+    margin-top: 15px;
+    font-size: 11px;
+    color: #666;
+    opacity: 0.7;
+}
+
 .modal {
     display: none;
     position: fixed;
