--- a/src/style.css
+++ b/src/style.css
@@ -128,6 +128,10 @@ body {
     justify-content: center;
     cursor: pointer;
     z-index: 100;
+    user-select: none;
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+    touch-action: manipulation;
 }
 
 .tap-overlay.show {
